--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
     "@tanstack/react-query": "^5.28.8",
+    "@web3modal/ui": "^3.5.7",
     "firebase": "^10.9.0",
     "ldrs": "^1.0.1",
     "moment": "^2.30.1",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "react-icons": "^5.5.0",
     "swiper": "^11.0.7",
     "workbox-core": "^7.1.0"
   },
